kos/test/corpus/expressions.txt
=================
Unary expressions
=================

1;
+2;
typeof 2;
-+3;
typeof delete !~+-4;

# Split into separate lines
typeof
delete
!
~
+
-
4

---

(source_file
    (expression
        (number))
    (expression
        (unary_expression
            (unary_operator)
            (number)))
    (expression
        (unary_expression
            (unary_operator)
            (number)))
    (expression
        (unary_expression
            (unary_operator)
            (unary_expression
                (unary_operator)
                (number))))
    (expression
        (unary_expression
            (unary_operator)
            (unary_expression
                (unary_operator)
                (unary_expression
                    (unary_operator)
                    (unary_expression
                        (unary_operator)
                        (unary_expression
                            (unary_operator)
                            (unary_expression
                                (unary_operator)
                                (number))))))))
    (comment)
    (expression
        (unary_expression
            (unary_operator)
            (unary_expression
                (unary_operator)
                (unary_expression
                    (unary_operator)
                    (unary_expression
                        (unary_operator)
                        (unary_expression
                            (unary_operator)
                            (unary_expression
                                (unary_operator)
                                (number)))))))))

==============
Multiplication
==============

1 * 2
3 / 4 * 5 % 6;
+11*12
13*+14

/* Split into separate lines
 * TODO If operator comes on a new line, this is legal syntax
 * however we do not parse it correctly
 */
3 /
4 *
5 %
+
6

---

(source_file
    (expression
        (binary_expression
            (number)
            (multiplicative_operator)
            (number)))
    (expression
        (binary_expression
            (binary_expression
                (binary_expression
                    (number)
                    (multiplicative_operator)
                    (number)
                )
                (multiplicative_operator)
                (number)
            )
            (multiplicative_operator)
            (number)))
    (expression
        (binary_expression
            (unary_expression
                (unary_operator)
                (number))
            (multiplicative_operator)
            (number)))
    (expression
        (binary_expression
            (number)
            (multiplicative_operator)
            (unary_expression
                (unary_operator)
                (number))))
    (comment)
    (expression
        (binary_expression
            (binary_expression
                (binary_expression
                    (number)
                    (multiplicative_operator)
                    (number)
                )
                (multiplicative_operator)
                (number)
            )
            (multiplicative_operator)
            (unary_expression
                (unary_operator)
                (number)))))

========
Addition
========

1 + 2
1 * 2 + 3
4 + 5 * 6
3 + 4 - 5 + 6

---

(source_file
    (expression
        (binary_expression
            (number)
            (additive_operator)
            (number)))
    (expression
        (binary_expression
            (binary_expression
                (number)
                (multiplicative_operator)
                (number))
            (additive_operator)
            (number)))
    (expression
        (binary_expression
            (number)
            (additive_operator)
            (binary_expression
                (number)
                (multiplicative_operator)
                (number))))
    (expression
        (binary_expression
            (binary_expression
                (binary_expression
                    (number)
                    (additive_operator)
                    (number)
                )
                (additive_operator)
                (number)
            )
            (additive_operator)
            (number))))

======
Shifts
======

const a = 1 << 2
const b = 1 >> 3
const c = -1 >>> 4

---

(source_file
    (expression (variable_definition
        (const_list (variable_decl (identifier)))
        (binary_expression
            (number)
            (bitwise_operator)
            (number))))
    (expression (variable_definition
        (const_list (variable_decl (identifier)))
        (binary_expression
            (number)
            (bitwise_operator)
            (number))))
    (expression (variable_definition
        (const_list (variable_decl (identifier)))
        (binary_expression
            (unary_expression
                (unary_operator)
                (number))
            (bitwise_operator)
            (number)))))

==========
Comparison
==========

a = 1 == 2
b(3 + 4 * 5 < 6 >> 7)

---

(source_file
    (expression (assignment
        (identifier)
        (binary_expression
            (number)
            (comparison_operator)
            (number))))
    (expression (invocation
        (identifier)
        (argument_list
            (binary_expression
                (binary_expression
                    (number)
                    (additive_operator)
                    (binary_expression
                        (number)
                        (multiplicative_operator)
                        (number)))
                (comparison_operator)
                (binary_expression
                    (number)
                    (bitwise_operator)
                    (number)))))))

===========
Conditional
===========

const a = 1 ? 2 : 3
const b = 4 == 5 && 10 < 11 ? 6 ^ 7 : 8 & 9

---

(source_file
    (expression
        (variable_definition (const_list
            (variable_decl (identifier)))
            (conditional_expression
                (number)
                (number)
                (number))))
    (expression
        (variable_definition (const_list
            (variable_decl (identifier)))
            (conditional_expression
                (binary_expression
                    (binary_expression
                        (number)
                        (comparison_operator)
                        (number))
                    (logical_operator)
                    (binary_expression
                        (number)
                        (comparison_operator)
                        (number)))
                (binary_expression
                    (number)
                    (bitwise_operator)
                    (number))
                (binary_expression
                    (number)
                    (bitwise_operator)
                    (number))))))

=====
Yield
=====

fun xx
{
    yield 1 == 2 * 3 ? 5 : 6
}

---

(source_file
    (function_decl
        (identifier)
        (compound_statement
            (expression
                (yield_expression
                    (conditional_expression
                        (binary_expression
                            (number)
                            (comparison_operator)
                            (binary_expression
                                (number)
                                (multiplicative_operator)
                                (number)))
                        (number)
                        (number)))))))

==========
Invocation
==========

function(42)

object.method(42)

---

(source_file
    (expression
        (invocation
            (identifier)
            (argument_list
                (number))))
    (expression
        (invocation
            (refinement
                (identifier)
                (property_identifier))
            (argument_list
                (number)))))
